[gd_scene load_steps=9 format=3 uid="uid://ckbjpwjqxh0yy"]

[ext_resource type="Script" path="res://scripts/options.gd" id="1_lmb1o"]
[ext_resource type="Texture2D" uid="uid://bg7c35yjp7hjv" path="res://Tilemap/tilemap.png" id="2_cx3x6"]
[ext_resource type="FontFile" uid="uid://btq1v7yv1t0ay" path="res://fonts/retroville/Retroville NC.ttf" id="3_jnt1d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q77ew"]
texture = ExtResource("2_cx3x6")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0

[sub_resource type="TileSet" id="TileSet_2ogee"]
sources/0 = SubResource("TileSetAtlasSource_q77ew")

[sub_resource type="Gradient" id="Gradient_ntx4e"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vqehq"]
gradient = SubResource("Gradient_ntx4e")
fill = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o6npc"]
texture = SubResource("GradientTexture2D_vqehq")
modulate_color = Color(0.054902, 1, 1, 0.243137)

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_lmb1o")

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_2ogee")
format = 2
layer_0/modulate = Color(0.116036, 0.570361, 0.784217, 1)
layer_0/tile_data = PackedInt32Array(0, 262144, 3, 1, 262144, 3, 2, 262144, 3, 65538, 262144, 3, 65536, 262144, 3, 131072, 262144, 3, 196608, 262144, 3, 262144, 262144, 3, 327680, 262144, 3, 393216, 262144, 3, 458752, 262144, 3, 524288, 262144, 3, 589824, 262144, 3, 655360, 262144, 3, 720896, 262144, 3, 786432, 262144, 3, 851968, 262144, 3, 917504, 262144, 3, 983040, 262144, 3, 1048576, 262144, 3, 1114112, 262144, 3, 1179648, 262144, 3, 1245184, 262144, 3, 1310720, 262144, 3, 1376256, 262144, 3, 1441792, 262144, 3, 1507328, 262144, 3, 1572864, 262144, 3, 1638400, 262144, 3, 1703936, 262144, 3, 1769472, 262144, 3, 1769473, 262144, 3, 1769474, 262144, 3, 1769475, 262144, 3, 1769476, 262144, 3, 1769477, 262144, 3, 1769478, 262144, 3, 1769479, 262144, 3, 1769480, 262144, 3, 1769481, 262144, 3, 1769482, 262144, 3, 1769483, 262144, 3, 1769484, 262144, 3, 1769485, 262144, 3, 1769486, 262144, 3, 1769487, 262144, 3, 1769488, 262144, 3, 1769489, 262144, 3, 1769490, 262144, 3, 1769491, 262144, 3, 1769492, 262144, 3, 1769493, 262144, 3, 1769494, 262144, 3, 1769495, 262144, 3, 1703959, 262144, 3, 1638423, 262144, 3, 1572887, 262144, 3, 1507351, 262144, 3, 1441815, 262144, 3, 1376279, 262144, 3, 1310743, 262144, 3, 1245207, 262144, 3, 1179671, 262144, 3, 1114135, 262144, 3, 1048599, 262144, 3, 983063, 262144, 3, 917527, 262144, 3, 851991, 262144, 3, 786455, 262144, 3, 720919, 262144, 3, 655383, 262144, 3, 589847, 262144, 3, 524311, 262144, 3, 458775, 262144, 3, 393239, 262144, 3, 327703, 262144, 3, 262167, 262144, 3, 196631, 262144, 3, 131095, 262144, 3, 65559, 262144, 3, 23, 262144, 3, 22, 262144, 3, 21, 262144, 3, 20, 262144, 3, 19, 262144, 3, 18, 262144, 3, 17, 262144, 3, 16, 262144, 3, 15, 262144, 3, 14, 262144, 3, 13, 262144, 3, 12, 262144, 3, 11, 262144, 3, 10, 262144, 3, 9, 262144, 3, 8, 262144, 3, 7, 262144, 3, 6, 262144, 3, 5, 262144, 3, 4, 262144, 3, 3, 262144, 3, 1179661, 262144, 3, 1114125, 262144, 3, 1048589, 262144, 3, 983053, 262144, 3, 917517, 262144, 3, 851981, 262144, 3, 786445, 262144, 3, 720909, 262144, 3, 655373, 262144, 3, 589837, 262144, 3, 524301, 262144, 3, 458765, 262144, 3, 393229, 262144, 3, 327693, 262144, 3, 262157, 262144, 3, 196621, 262144, 3, 131085, 262144, 3, 65549, 262144, 3, 65548, 262144, 3, 65547, 262144, 3, 65546, 262144, 3, 65545, 262144, 3, 65544, 262144, 3, 65543, 262144, 3, 65542, 262144, 3, 65541, 262144, 3, 65540, 262144, 3, 65539, 262144, 3, 131075, 262144, 3, 131074, 262144, 3, 131073, 262144, 3, 65537, 262144, 3, 196609, 262144, 3, 262145, 262144, 3, 327681, 262144, 3, 393217, 262144, 3, 458753, 262144, 3, 524289, 262144, 3, 589825, 262144, 3, 655361, 262144, 3, 720897, 262144, 3, 786433, 262144, 3, 851969, 262144, 3, 917505, 262144, 3, 983041, 262144, 3, 1048577, 262144, 3, 1114113, 262144, 3, 1179649, 262144, 3, 1245185, 262144, 3, 1310721, 262144, 3, 1376257, 262144, 3, 1441793, 262144, 3, 1507329, 262144, 3, 1572865, 262144, 3, 1638401, 262144, 3, 1703937, 262144, 3, 1703938, 262144, 3, 1638402, 262144, 3, 1572866, 262144, 3, 1507330, 262144, 3, 1441794, 262144, 3, 1376258, 262144, 3, 1310722, 262144, 3, 1245186, 262144, 3, 1179650, 262144, 3, 1114114, 262144, 3, 1048578, 262144, 3, 983042, 262144, 3, 917506, 262144, 3, 851970, 262144, 3, 786434, 262144, 3, 720898, 262144, 3, 655362, 262144, 3, 589826, 262144, 3, 524290, 262144, 3, 458754, 262144, 3, 393218, 262144, 3, 327682, 262144, 3, 262146, 262144, 3, 196610, 262144, 3, 196611, 262144, 3, 262147, 262144, 3, 327683, 262144, 3, 393219, 262144, 3, 458755, 262144, 3, 524291, 262144, 3, 589827, 262144, 3, 655363, 262144, 3, 720899, 262144, 3, 786435, 262144, 3, 851971, 262144, 3, 917507, 262144, 3, 983043, 262144, 3, 1048579, 262144, 3, 1114115, 262144, 3, 1179651, 262144, 3, 1245187, 262144, 3, 1310723, 262144, 3, 1376259, 262144, 3, 1441795, 262144, 3, 1507331, 262144, 3, 1572867, 262144, 3, 1638403, 262144, 3, 1703939, 262144, 3, 1703940, 262144, 3, 1638404, 262144, 3, 1572868, 262144, 3, 1507332, 262144, 3, 1441796, 262144, 3, 1376260, 262144, 3, 1310724, 262144, 3, 1245188, 262144, 3, 1179652, 262144, 3, 1114116, 262144, 3, 1048580, 262144, 3, 983044, 262144, 3, 917508, 262144, 3, 851972, 262144, 3, 786436, 262144, 3, 720900, 262144, 3, 655364, 262144, 3, 589828, 262144, 3, 524292, 262144, 3, 458756, 262144, 3, 393220, 262144, 3, 327684, 262144, 3, 262148, 262144, 3, 196612, 262144, 3, 131076, 262144, 3, 131077, 262144, 3, 196613, 262144, 3, 262149, 262144, 3, 327685, 262144, 3, 393221, 262144, 3, 458757, 262144, 3, 524293, 262144, 3, 589829, 262144, 3, 655365, 262144, 3, 720901, 262144, 3, 786437, 262144, 3, 851973, 262144, 3, 917509, 262144, 3, 983045, 262144, 3, 1048581, 262144, 3, 1114117, 262144, 3, 1179653, 262144, 3, 1245189, 262144, 3, 1310725, 262144, 3, 1376261, 262144, 3, 1441797, 262144, 3, 1507333, 262144, 3, 1572869, 262144, 3, 1638405, 262144, 3, 1703941, 262144, 3, 1703942, 262144, 3, 1638406, 262144, 3, 1572870, 262144, 3, 1507334, 262144, 3, 1441798, 262144, 3, 1376262, 262144, 3, 1310726, 262144, 3, 1245190, 262144, 3, 1179654, 262144, 3, 1114118, 262144, 3, 1048582, 262144, 3, 983046, 262144, 3, 917510, 262144, 3, 851974, 262144, 3, 786438, 262144, 3, 720902, 262144, 3, 655366, 262144, 3, 589830, 262144, 3, 524294, 262144, 3, 458758, 262144, 3, 393222, 262144, 3, 327686, 262144, 3, 262150, 262144, 3, 196614, 262144, 3, 131078, 262144, 3, 131079, 262144, 3, 196615, 262144, 3, 262151, 262144, 3, 327687, 262144, 3, 393223, 262144, 3, 458759, 262144, 3, 524295, 262144, 3, 589831, 262144, 3, 655367, 262144, 3, 720903, 262144, 3, 786439, 262144, 3, 851975, 262144, 3, 917511, 262144, 3, 983047, 262144, 3, 1048583, 262144, 3, 1114119, 262144, 3, 1179655, 262144, 3, 1245191, 262144, 3, 1310727, 262144, 3, 1376263, 262144, 3, 1441799, 262144, 3, 1507335, 262144, 3, 1572871, 262144, 3, 1638407, 262144, 3, 1703943, 262144, 3, 1703944, 262144, 3, 1638408, 262144, 3, 1572872, 262144, 3, 1507336, 262144, 3, 1441800, 262144, 3, 1376264, 262144, 3, 1310728, 262144, 3, 1245192, 262144, 3, 1179656, 262144, 3, 1114120, 262144, 3, 1048584, 262144, 3, 983048, 262144, 3, 917512, 262144, 3, 851976, 262144, 3, 786440, 262144, 3, 720904, 262144, 3, 655368, 262144, 3, 589832, 262144, 3, 524296, 262144, 3, 458760, 262144, 3, 393224, 262144, 3, 327688, 262144, 3, 262152, 262144, 3, 196616, 262144, 3, 131080, 262144, 3, 131081, 262144, 3, 196617, 262144, 3, 262153, 262144, 3, 327689, 262144, 3, 393225, 262144, 3, 458761, 262144, 3, 524297, 262144, 3, 589833, 262144, 3, 655369, 262144, 3, 720905, 262144, 3, 786441, 262144, 3, 851977, 262144, 3, 917513, 262144, 3, 983049, 262144, 3, 1048585, 262144, 3, 1114121, 262144, 3, 1179657, 262144, 3, 1245193, 262144, 3, 1310729, 262144, 3, 1376265, 262144, 3, 1441801, 262144, 3, 1507337, 262144, 3, 1572873, 262144, 3, 1638409, 262144, 3, 1703945, 262144, 3, 1703946, 262144, 3, 1638410, 262144, 3, 1572874, 262144, 3, 1507338, 262144, 3, 1441802, 262144, 3, 1376266, 262144, 3, 1310730, 262144, 3, 1245194, 262144, 3, 1179658, 262144, 3, 1114122, 262144, 3, 1048586, 262144, 3, 983050, 262144, 3, 917514, 262144, 3, 851978, 262144, 3, 786442, 262144, 3, 720906, 262144, 3, 655370, 262144, 3, 589834, 262144, 3, 524298, 262144, 3, 458762, 262144, 3, 393226, 262144, 3, 327690, 262144, 3, 262154, 262144, 3, 196618, 262144, 3, 131082, 262144, 3, 131083, 262144, 3, 196619, 262144, 3, 262155, 262144, 3, 327691, 262144, 3, 393227, 262144, 3, 458763, 262144, 3, 524299, 262144, 3, 589835, 262144, 3, 655371, 262144, 3, 720907, 262144, 3, 786443, 262144, 3, 851979, 262144, 3, 917515, 262144, 3, 983051, 262144, 3, 1048587, 262144, 3, 1114123, 262144, 3, 1179659, 262144, 3, 1245195, 262144, 3, 1310731, 262144, 3, 1376267, 262144, 3, 1441803, 262144, 3, 1507339, 262144, 3, 1572875, 262144, 3, 1638411, 262144, 3, 1703947, 262144, 3, 1703948, 262144, 3, 1638412, 262144, 3, 1572876, 262144, 3, 1507340, 262144, 3, 1441804, 262144, 3, 1376268, 262144, 3, 1310732, 262144, 3, 1245196, 262144, 3, 1179660, 262144, 3, 1114124, 262144, 3, 1048588, 262144, 3, 983052, 262144, 3, 917516, 262144, 3, 851980, 262144, 3, 786444, 262144, 3, 720908, 262144, 3, 655372, 262144, 3, 589836, 262144, 3, 524300, 262144, 3, 458764, 262144, 3, 393228, 262144, 3, 327692, 262144, 3, 262156, 262144, 3, 196620, 262144, 3, 131084, 262144, 3, 1245197, 262144, 3, 1310733, 262144, 3, 1376269, 262144, 3, 1441805, 262144, 3, 1507341, 262144, 3, 1572877, 262144, 3, 1638413, 262144, 3, 1703949, 262144, 3, 1703950, 262144, 3, 1638414, 262144, 3, 1572878, 262144, 3, 1507342, 262144, 3, 1441806, 262144, 3, 1376270, 262144, 3, 1310734, 262144, 3, 1245198, 262144, 3, 1179662, 262144, 3, 1114126, 262144, 3, 1048590, 262144, 3, 983054, 262144, 3, 917518, 262144, 3, 851982, 262144, 3, 786446, 262144, 3, 720910, 262144, 3, 655374, 262144, 3, 589838, 262144, 3, 524302, 262144, 3, 458766, 262144, 3, 393230, 262144, 3, 327694, 262144, 3, 262158, 262144, 3, 196622, 262144, 3, 131086, 262144, 3, 65550, 262144, 3, 65551, 262144, 3, 131087, 262144, 3, 196623, 262144, 3, 262159, 262144, 3, 327695, 262144, 3, 393231, 262144, 3, 458767, 262144, 3, 524303, 262144, 3, 589839, 262144, 3, 655375, 262144, 3, 720911, 262144, 3, 786447, 262144, 3, 851983, 262144, 3, 917519, 262144, 3, 983055, 262144, 3, 1048591, 262144, 3, 1114127, 262144, 3, 1179663, 262144, 3, 1245199, 262144, 3, 1310735, 262144, 3, 1376271, 262144, 3, 1441807, 262144, 3, 1507343, 262144, 3, 1572879, 262144, 3, 1638415, 262144, 3, 1703951, 262144, 3, 1703952, 262144, 3, 1638416, 262144, 3, 1572880, 262144, 3, 1507344, 262144, 3, 1441808, 262144, 3, 1376272, 262144, 3, 1310736, 262144, 3, 1245200, 262144, 3, 1179664, 262144, 3, 1114128, 262144, 3, 1048592, 262144, 3, 983056, 262144, 3, 917520, 262144, 3, 851984, 262144, 3, 786448, 262144, 3, 720912, 262144, 3, 655376, 262144, 3, 589840, 262144, 3, 524304, 262144, 3, 458768, 262144, 3, 393232, 262144, 3, 327696, 262144, 3, 262160, 262144, 3, 196624, 262144, 3, 131088, 262144, 3, 65552, 262144, 3, 65553, 262144, 3, 131089, 262144, 3, 196625, 262144, 3, 262161, 262144, 3, 327697, 262144, 3, 393233, 262144, 3, 458769, 262144, 3, 524305, 262144, 3, 589841, 262144, 3, 655377, 262144, 3, 720913, 262144, 3, 786449, 262144, 3, 851985, 262144, 3, 917521, 262144, 3, 983057, 262144, 3, 1048593, 262144, 3, 1114129, 262144, 3, 1179665, 262144, 3, 1245201, 262144, 3, 1310737, 262144, 3, 1376273, 262144, 3, 1441809, 262144, 3, 1507345, 262144, 3, 1572881, 262144, 3, 1638417, 262144, 3, 1703953, 262144, 3, 1703954, 262144, 3, 1638418, 262144, 3, 1572882, 262144, 3, 1507346, 262144, 3, 1441810, 262144, 3, 1376274, 262144, 3, 1310738, 262144, 3, 1245202, 262144, 3, 1179666, 262144, 3, 1114130, 262144, 3, 1048594, 262144, 3, 983058, 262144, 3, 917522, 262144, 3, 851986, 262144, 3, 786450, 262144, 3, 720914, 262144, 3, 655378, 262144, 3, 589842, 262144, 3, 524306, 262144, 3, 458770, 262144, 3, 393234, 262144, 3, 327698, 262144, 3, 262162, 262144, 3, 196626, 262144, 3, 131090, 262144, 3, 65554, 262144, 3, 65555, 262144, 3, 131091, 262144, 3, 196627, 262144, 3, 262163, 262144, 3, 327699, 262144, 3, 393235, 262144, 3, 458771, 262144, 3, 524307, 262144, 3, 589843, 262144, 3, 655379, 262144, 3, 720915, 262144, 3, 786451, 262144, 3, 851987, 262144, 3, 917523, 262144, 3, 983059, 262144, 3, 1048595, 262144, 3, 1114131, 262144, 3, 1179667, 262144, 3, 1245203, 262144, 3, 1310739, 262144, 3, 1376275, 262144, 3, 1441811, 262144, 3, 1507347, 262144, 3, 1572883, 262144, 3, 1638419, 262144, 3, 1703955, 262144, 3, 1703956, 262144, 3, 1638420, 262144, 3, 1572884, 262144, 3, 1507348, 262144, 3, 1441812, 262144, 3, 1376276, 262144, 3, 1310740, 262144, 3, 1245204, 262144, 3, 1179668, 262144, 3, 1114132, 262144, 3, 1048596, 262144, 3, 983060, 262144, 3, 917524, 262144, 3, 851988, 262144, 3, 786452, 262144, 3, 720916, 262144, 3, 655380, 262144, 3, 589844, 262144, 3, 524308, 262144, 3, 458772, 262144, 3, 393236, 262144, 3, 327700, 262144, 3, 262164, 262144, 3, 196628, 262144, 3, 131092, 262144, 3, 65556, 262144, 3, 65557, 262144, 3, 131093, 262144, 3, 196629, 262144, 3, 262165, 262144, 3, 327701, 262144, 3, 393237, 262144, 3, 458773, 262144, 3, 524309, 262144, 3, 589845, 262144, 3, 655381, 262144, 3, 720917, 262144, 3, 786453, 262144, 3, 851989, 262144, 3, 917525, 262144, 3, 983061, 262144, 3, 1048597, 262144, 3, 1114133, 262144, 3, 1179669, 262144, 3, 1245205, 262144, 3, 1310741, 262144, 3, 1376277, 262144, 3, 1441813, 262144, 3, 1507349, 262144, 3, 1572885, 262144, 3, 1638421, 262144, 3, 1703957, 262144, 3, 1703958, 262144, 3, 1638422, 262144, 3, 1572886, 262144, 3, 1507350, 262144, 3, 1441814, 262144, 3, 1376278, 262144, 3, 1310742, 262144, 3, 1245206, 262144, 3, 1179670, 262144, 3, 1114134, 262144, 3, 1048598, 262144, 3, 983062, 262144, 3, 917526, 262144, 3, 851990, 262144, 3, 786454, 262144, 3, 720918, 262144, 3, 655382, 262144, 3, 589846, 262144, 3, 524310, 262144, 3, 458774, 262144, 3, 393238, 262144, 3, 327702, 262144, 3, 262166, 262144, 3, 196630, 262144, 3, 131094, 262144, 3, 65558, 262144, 3)

[node name="Panel2" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_o6npc")

[node name="BackButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.28
offset_top = -49.26
offset_right = 57.28
offset_bottom = -13.26
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_jnt1d")
theme_override_font_sizes/font_size = 20
text = "Back
"

[node name="ResetProgressButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -15.5
offset_right = 61.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_jnt1d")
text = "Reset progress"

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -60.0
offset_right = 98.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="FPSVisibilityToggle" type="CheckButton" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.5
offset_top = 166.0
offset_right = 72.5
offset_bottom = 197.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_jnt1d")
action_mode = 0
text = "FPS Visibility"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ResetProgressButton" to="." method="_on_reset_progress_pressed"]
[connection signal="pressed" from="FPSVisibilityToggle" to="." method="_on_fps_visibility_toggle_pressed"]
